k8s-manifests/frontend-deployment-definition.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sb-frontend-deployment
  namespace: sb-ns
  labels:
    app: smallboy
    type: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smallboy
      type: frontend
  template:
    metadata:
      labels:
        app: smallboy
        type: frontend
    spec:
      containers:
        - name: sb-frontend-pod
          image: danklofan/smallboy-client:fixed
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
          ports:
            - containerPort: 80  # nginx default port
