k8s-manifests/backend-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: backend-service
  labels:
    app: smallboy
    type: backend
spec:
 type: ClusterIP
 ports:
  - targetPort: 5000
    port: 80
 selector:
  app: smallboy
  type: backend
