k8s-manifests/database-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: sb-ns
spec:
  selector:
       app: smallboy
       type: database
  ports:
    - port: 27017
      targetPort: 27017
