k8s-manifests/frontend-service.yml
apiVersion: v1 
kind: Service
metadata:
  name: frontend-service
  labels:
    app: smallboy
    type: frontend
spec:
 type: ClusterIP
 ports:
  - targetPort: 80
    port: 3000
 selector:
  app: smallboy
  type: frontend
