k8s-manifests/mongo-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-svc
  namespace: app1
spec:
  selector:
       app: smallboy
       type: database
  ports:
    - port: 27017
      targetPort: 27017
