k8s-manifests/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: smallboy-ingress
   namespace: app1
   annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
 tls:
  - hosts:
    - smallboy.danklofan.com
    secretName: myapp-tls
    
 rules:
  - host: smallboy.danklofan.com
    http:
      paths:
         - path: /
           pathType: Prefix
           backend: 
             service:
               name: frontend-service
               port:
                number: 80

         - path: /api
           pathType: Prefix
           backend:
             service:
               name: backend-service
               port:
                number: 80
